--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
         <!-- Navigation-->
         <a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
         <nav id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
+            <ul class="sidebar-nav">                
                 <li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
                 <li class="sidebar-nav-item"><a href="#about">About</a></li>                
                 <li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
@@ -34,7 +33,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 class="mb-1">Portafolio de Proyectos</h1>
                 <h3 class="mb-5"><em>Raul Leonardo Lopez Ruiz</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">Conoce</a>
+                <a class="btn btn-primary btn-xl" href="#about">Sobre mi</a>
             </div>
         </header>
         <!-- About-->
