--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <p class="mb-0">En proceso</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portafolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/prtafolio-1.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
