--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#!">
+                        <a class="portfolio-item" href="https://github.com/RaulLopez3108/Proyecto-IS">
                             <div class="caption">
                                 <div class="caption-content">
                                     <div class="h2">Proyecto 1</div>
-                                    <p class="mb-0">En proceso</p>
+                                    <p class="mb-0">Libreria</p>
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/prtafolio-1.jpg" alt="..." />
